# paper-mimic

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  EXTRACTION_COMPLETE.md  GUIDE.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SETUP.md  START_HERE.md  docker-compose.yml  magic-pdf.json  pyproject.toml  requirements.txt  run_server.py  test_gemini.py  test_gen_pdf.py
config/: main.yaml  question_config.yaml
reference_papers/test/: test_20260114_021432_questions.json
reference_papers/test/auto/: test.md
src/: __init__.py
src/agents/question/: __init__.py  coordinator.py
src/agents/question/tools/: exam_mimic.py  pdf_parser.py
src/api/: main.py
src/api/routers/: __init__.py  history.py  question.py
src/logging/: logger.py
src/services/: config.py  llm.py
web/: package-lock.json  package.json
web/src/app/: page.tsx
web/src/components/: HistorySidebar.tsx  PDFUpload.tsx  ProgressDisplay.tsx  ResultsViewer.tsx
web/src/types/: index.ts
web/src/utils/: pdfGenerator.ts
